--- a/templates/patient-report/group-reports.html
+++ b/templates/patient-report/group-reports.html
@@ -11,7 +11,7 @@
                 <div class="col-xs-12 col-md-6">
                 <h2 class="modal-title">
                     <span class="glyphicon glyphicon-pencil"></span> 
-                    Group Patient Reports 
+                    {{'PATIENTREPORT.GROUP.TITLE'|translate}}
                 </h2>
                 </div>
             </div>
@@ -20,55 +20,53 @@
 
                 <div id="GroupReport">
 
-                        <p> Select group reporting category </p>
-                        <label><input type="checkbox" ng-model="category.education" ng-change="category.questionnaire = false; category.demographics = false;"> Educational Material </label>
+                        <p>{{'PATIENTREPORT.GROUP.PSELECT'|translate}}</p>
+                        <label><input type="checkbox" ng-model="category.education" ng-change="category.questionnaire = false; category.demographics = false;"> {{'PATIENTREPORT.GROUP.TITLE_EDUC'|translate}} </label>
                         <br>
-                        <label><input type="checkbox" ng-model="category.questionnaire" ng-change="category.education = false; category.demographics = false; genQuestionnaireOptions();"> Questionnaires </label>
+                        <label><input type="checkbox" ng-model="category.questionnaire" ng-change="category.education = false; category.demographics = false; genQuestionnaireOptions();"> {{'PATIENTREPORT.GROUP.TITLE_QST'|translate}} </label>
                         <br>
-                        <label><input type="checkbox" ng-model="category.demographics" ng-change="category.education = false; category.questionnaire = false; genPatientReport();"> Demographics </label>
+                        <label><input type="checkbox" ng-model="category.demographics" ng-change="category.education = false; category.questionnaire = false; genPatientReport();"> {{'PATIENTREPORT.GROUP.TITLE_DEMO'|translate}} </label>
                         <br>
 
                         <div ng-show="category.education" class="panel-container">
                             <center>
-                                <h2> Educational Material Group Reporting </h2>
+                                <h2>{{'PATIENTREPORT.GROUP.TITLE_EDUC'|translate}} {{'PATIENTREPORT.GROUP.TAIL'|translate}} </h2>
                             </center>
 
                             <label>
-                                Educational material type:
+                                {{'PATIENTREPORT.GROUP.EDUC_TYPE'|translate}}
                                 <select ng-model="materialType" ng-options="x for x in materialTypes"
                                         ng-change="genEducationMaterialOptions()"></select>
                             </label>
 
-                            <!-- <button ng-click="clearEduc();">Clear</button> -->
-
 
                             <br>
                             <label ng-show="displayMaterialList">
-                                All {{materialType}} currently found in OpalDB: <select ng-model="selectedMaterial" ng-options="x for x in educList" ng-change="genEducReport(); showEducReport = true;" style="max-width:200px;"></select>
+                                {{'PATIENTREPORT.GROUP.ALL'|translate}} {{materialType}} {{'PATIENTREPORT.GROUP.FOUND'|translate}} <select ng-model="selectedMaterial" ng-options="x for x in educList" ng-change="genEducReport(); showEducReport = true;" style="max-width:200px;"></select>
                             </label>
                             <div ng-show="showEducReport">
                                 <div class="panel-info">
                                     <div class="panel-input"> 
-                                        <h2 style="color:black; text-align:left;"> Statistics for this report </h2>
+                                        <h2 style="text-align:left;"> {{'PATIENTREPORT.GROUP.STATS'|translate}} </h2>
                                         <table style="text-align:left; border:1px dotted rgb(36, 21, 32); border-collapse: collapse;">
                                             <tr>
-                                                <td style="font-weight:bold;">% Female/Male</td>
-                                                <td>{{educFemPcnt}}% female; {{educMalPcnt}}% male; {{educUnkPcnt}}% unknown</td>
+                                                <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.MF'|translate}}</td>
+                                                <td>{{educFemPcnt}}% / {{educMalPcnt}}% / {{educUnkPcnt}}% </td>
                                             </tr>
                                             <tr>
-                                                <td style="font-weight:bold;">Average patient age</td>
-                                                <td>{{educAvgAge}} years</td>
+                                                <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.AVAGE'|translate}}</td>
+                                                <td>{{educAvgAge}} {{'PATIENTREPORT.GROUP.YR'|translate}}</td>
                                             </tr>
                                             <tr>
-                                                <td style="font-weight:bold;">% Materials Read</td>
-                                                <td>{{educReadPcnt}}% completed</td>
+                                                <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.READ'|translate}}</td>
+                                                <td>{{educReadPcnt}}%</td>
                                             </tr>
                                             <tr>
-                                                <td style="font-weight:bold;">Average time until reading</td>
-                                                <td>{{educAvgDaysToRead}} days</td>
+                                                <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.AVTIME'|translate}}</td>
+                                                <td>{{educAvgDaysToRead}} {{'PATIENTREPORT.GROUP.DY'|translate}}</td>
                                             </tr>
                                         </table>
-                                        <h3 style="text-align:left;"> Full report on {{materialType}}: {{selectedMaterial}}, {{educReportLength}} records found</h3>
+                                        <h3 style="text-align:left;"> {{'PATIENTREPORT.GROUP.REPORT'|translate}} {{materialType}}: {{selectedMaterial}}, {{educReportLength}} {{'PATIENTREPORT.GROUP.RECORDS'|translate}}</h3>
                                         <!-- Load main table -->
                                         <div class="gridStyle" ui-grid="educGridOptions" ui-grid-resize-columns style="height:75vh; width:75vw;"></div>
                                     </div>
@@ -79,40 +77,40 @@
 
                         <div ng-show="category.questionnaire" class="panel-container">
                             <center>
-                                <h2> Questionnaire Group Reporting </h2>
+                                <h2> {{'PATIENTREPORT.GROUP.TITLE_QST'|translate}} {{'PATIENTREPORT.GROUP.TAIL'|translate}} </h2>
                             </center>
                             <label>
-                                Choose questionnaire:
+                                {{'PATIENTREPORT.GROUP.QST_CHOOSE'|translate}}
                                 <select ng-model="selectedQuestionnaire" ng-options="x for x in qstList"
                                         ng-change="genQstReport(); showQstReport = true;"></select>
                             </label>
 
                             <div ng-show="showQstReport" class="panel-info">
                                 <div class="panel-input">
-                                    <h2 style="color:black; text-align:left;"> Statistics for this report </h2>
+                                    <h2 style="text-align:left;">{{'PATIENTREPORT.GROUP.STATS'|translate}}</h2>
                                     <table style="text-align:left; border:1px dotted rgb(36, 21, 32); border-collapse: collapse;">
                                         <tr>
-                                            <td style="font-weight:bold;">% Female/Male</td>
-                                            <td>{{qstPcntFemale}}% female; {{qstPcntMale}}% male; {{qstPcntUnk}}% unknown</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.MF'|translate}}</td>
+                                            <td>{{qstPcntFemale}}% / {{qstPcntMale}}% / {{qstPcntUnk}}% </td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Total # unique patients in report</td>
-                                            <td>{{qstUniquePats}} unique patients</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.UNIQUE'|translate}}</td>
+                                            <td>{{qstUniquePats}}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Average patient age (in this report)</td>
-                                            <td>{{qstAvgAge}} years</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.AVAGE'|translate}}</td>
+                                            <td>{{qstAvgAge}} {{'PATIENTREPORT.GROUP.YR'|translate}}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Total % completed questionnaires</td>
-                                            <td>{{qstPcntCompleted}}% completed</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.PCNT_COMPLETE'|translate}}</td>
+                                            <td>{{qstPcntCompleted}}% </td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Average completion time (among completed questionnaires)</td>
-                                            <td>{{qstAvgCompletTime}} days</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.AVTIME'|translate}}</td>
+                                            <td>{{qstAvgCompletTime}} {{'PATIENTREPORT.GROUP.DY'|translate}}</td>
                                         </tr>
                                     </table>
-                                    <h3 style="text-align: left;"> Full report on {{selectedQuestionnaire}}, {{qstReportLength}} total records found</h3>
+                                    <h3 style="text-align: left;"> {{'PATIENTREPORT.GROUP.REPORT'|translate}} {{selectedQuestionnaire}}, {{qstReportLength}} {{'PATIENTREPORT.GROUP.RECORDS'|translate}}</h3>
                                     <!-- Load main table -->
                                     <div class="gridStyle" ui-grid="qstGridOptions" ui-grid-resize-columns style="height:75vh; width:75vw;"></div>
                             
@@ -124,22 +122,22 @@
                         <div ng-show="category.demographics" class="panel-container">
                             <div class="panel-info">
                                 <center>
-                                    <h2> Demographics Group Reporting </h2>
+                                    <h2> {{'PATIENTREPORT.GROUP.TITLE_DEMO'|translate}} {{'PATIENTREPORT.GROUP.TAIL'|translate}}</h2>
                                 </center>
                                 <div class="panel-input">
-                                    <h2 style="color:black; text-align:left;"> Statistics for this report </h2>
+                                    <h2 style="text-align:left;"> {{'PATIENTREPORT.GROUP.STATS'|translate}} </h2>
                                     <table style="text-align:left; border:1px dotted rgb(36, 21, 32); border-collapse: collapse;">
                                         <tr>
-                                            <td style="font-weight:bold;">% Female/Male</td>
-                                            <td>{{demoPcntFemale}}% female; {{demoPcntMale}}% male; {{demoPcntUnk}}% unknown</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.MF'|translate}}</td>
+                                            <td>{{demoPcntFemale}}% / {{demoPcntMale}}% / {{demoPcntUnk}}%</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">Average Patient Age</td>
-                                            <td>{{demoAvgAge}} years</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.AVAGE'|translate}}</td>
+                                            <td>{{demoAvgAge}} {{'PATIENTREPORT.GROUP.YR'|translate}}</td>
                                         </tr>
                                         <tr>
-                                            <td style="font-weight:bold;">% French/English Preferred</td>
-                                            <td>{{demoPcntFrench}}% french preferred; {{demoPcntEnglish}}% english preferred;</td>
+                                            <td style="font-weight:bold;">{{'PATIENTREPORT.GROUP.FE'|translate}}</td>
+                                            <td>{{demoPcntFrench}}% / {{demoPcntEnglish}}%</td>
                                         </tr>
                                     </table>
 
@@ -147,15 +145,10 @@
                                     <div id="plot2" style="width:30vw;"></div>
 
 
-                                    <h3 style="text-align:left;">Full report on patient demographics, {{patientReportLength}} total patients</h3>
+                                    <h3 style="text-align:left;">{{'PATIENTREPORT.GROUP.REPORT'|translate}} {{'PATIENTREPORT.GROUP.TITLE_DEMO'|translate}}, {{patientReportLength}} {{'PATIENTREPORT.GROUP.RECORDS'|translate}}</h3>
                                     <!-- Load main table -->
                                     <div class="gridStyle" ui-grid="demoGridOptions" ui-grid-resize-columns style="height:75vh; width:75vw;"></div>
                                 
-                                    <!--Plotting divisions for some stats visualizations-->
-                                    <!-- <div id="plotDiv1" style="width: 80%; float:left;">
-                                    </div>
-                                    <div id="plotDiv2" style="width: 100%; clear:both;">
-                                    </div> -->
                                 </div>
                             
                             </div>
