--- a/templates/study/add.study.html
+++ b/templates/study/add.study.html
@@ -52,7 +52,7 @@
                         </div>
                         <uib-accordion class="side-navbar">
                             <!-- SECTION: Details -->
-                            <div uib-accordion-group is-open="leftMenu.details.open" class="panel-container summary-box" is-disabled="!validator.details.completed" ng-if="(toSubmit.details.code || toSubmit.details.title)">
+                            <div uib-accordion-group is-open="leftMenu.details.open" class="panel-container summary-box" is-disabled="!validator.details.completed" ng-if="(toSubmit.details.code || toSubmit.details.title_en || toSubmit.details.title_fr)">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
@@ -66,17 +66,55 @@
                                         </div>
                                     </div>
                                 </uib-accordion-heading>
-                                <div ng-if="toSubmit.details.code || toSubmit.details.title" class="description">
+                                <div ng-if="toSubmit.details.code || toSubmit.details.title_en || toSubmit.details.title_fr" class="description">
                                     <p style="margin-bottom:0;" ng-show="toSubmit.details.code">
                                         <b>{{'STUDY.ADD.STUDY_ID'|translate}}:</b> {{toSubmit.details.code}}
                                     </p>
-                                    <p style="margin-bottom:0;" ng-show="toSubmit.details.title">
-                                        <b>{{'STUDY.ADD.TITLE_2'|translate}}:</b> {{toSubmit.details.title}}
+                                    <p style="margin-bottom:0;" ng-show="toSubmit.details.title_en">
+                                        <b>{{'STUDY.ADD.TITLE_EN'|translate}}:</b> {{toSubmit.details.title_en}}
+                                    </p>
+                                    <p style="margin-bottom:0;" ng-show="toSubmit.details.title_fr">
+                                        <b>{{'STUDY.ADD.TITLE_FR'|translate}}:</b> {{toSubmit.details.title_fr}}
                                     </p>
                                 </div>
                             </div>
+
+                            <!-- SECTION: Title & description -->
+                            <div uib-accordion-group is-open="leftMenu.title_desc.open" class="panel-container summary-box animated" ng-if="leftMenu.title_desc.open" is-disabled="leftMenu.title_desc.open && !validator.title_desc.completed">
+                                <uib-accordion-heading>
+                                    <div class="row" style="align-items: center">
+                                        <div class="col-md-2">
+                                            <span ng-if="toSubmit.title_desc.title_EN && toSubmit.title_desc.title_FR && toSubmit.title_desc.description_EN && toSubmit.title_desc.description_FR" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                        </div>
+                                        <div class="col-md-8">
+                                            <strong>{{'STUDY.ADD.TITLE_DESCRIPTION'|translate}}</strong>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': titleDescriptionSection.open, 'glyphicon-chevron-right': !titleDescriptionSection.open}" ng-if="toSubmit.title_desc.title_EN || toSubmit.title_desc.title_FR || toSubmit.title_desc.description_EN || toSubmit.title_desc.description_FR"></i>
+                                        </div>
+                                    </div>
+                                </uib-accordion-heading>
+                                <div ng-if="toSubmit.title_desc.title_EN || toSubmit.title_desc.description_EN" class="description">
+                                    <p ng-if="toSubmit.title_desc.title_EN" style="margin-bottom:5px;">
+                                        <strong>{{'STUDY.ADD.ENGLISH'|translate}} </strong>
+                                        <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                                        {{toSubmit.title_desc.title_EN}}
+                                    </p>
+                                    <p ng-if="toSubmit.title_desc.description_EN" style="padding-left: 10px; font-size: 10px;"><em>{{'STUDY.ADD.SEE_DESCRIPTION'|translate}} </em></p>
+                                </div>
+                                <div ng-if="toSubmit.title_desc.title_FR || toSubmit.title_desc.description_FR" class="description">
+                                    <p ng-if="toSubmit.title_desc.title_FR" style="margin-bottom:5px;">
+                                        <strong>{{'STUDY.ADD.FRENCH'|translate}} </strong>
+                                        <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
+                                        {{toSubmit.title_desc.title_FR}}
+                                    </p>
+                                    <p ng-if="toSubmit.title_desc.description_FR" style="padding-left: 10px; font-size: 10px;"><em>{{'STUDY.ADD.SEE_DESCRIPTION'|translate}} </em></p>
+                                </div>
+                            </div>
+
+
                             <!-- SECTION: Principal investigator -->
-                            <div uib-accordion-group is-open="leftMenu.investigator.open" class="panel-container summary-box " ng-class="{fadeIn: validator.investigator.completed}" ng-if="validator.investigator.completed;" is-disabled="!toSubmit.investigator.name">
+                            <div uib-accordion-group is-open="leftMenu.investigator.open" class="panel-container summary-box " ng-if="validator.investigator.completed;" is-disabled="!toSubmit.investigator.name">
                                 <uib-accordion-heading>
                                     <div class="row" style="align-items: center">
                                         <div class="col-md-2">
@@ -123,6 +161,27 @@
                                         <span class="fa fa-angle-double-right" style="padding-right: 7px;"></span>
                                         <span ng-if="toSubmit.dates.end_date">{{toSubmit.dates.end_date | date: 'yyyy-MM-dd' }}</span>
                                         <span ng-if="!toSubmit.dates.end_date">{{'STUDY.ADD.NA'|translate}}</span>
+                                    </p>
+                                </div>
+                            </div>
+                            <!-- SECTION: Patients -->
+                            <div uib-accordion-group is-open="leftMenu.patients.open" class="panel-container summary-box " ng-class="{fadeIn: validator.patients.completed}" ng-if="validator.patients.completed;" is-disabled="!validator.patients.completed">
+                                <uib-accordion-heading>
+                                    <div class="row" style="align-items: center">
+                                        <div class="col-md-2">
+                                            <span ng-if="validator.patients.completed" style="color:#5cb85c" class="glyphicon glyphicon-ok"></span>
+                                        </div>
+                                        <div class="col-md-8">
+                                            <strong>{{'STUDY.ADD.PATIENTS'|translate}}</strong>
+                                        </div>
+                                        <div class="col-md-2">
+                                            <i class="pull-right glyphicon" ng-class="{'glyphicon-chevron-down': leftMenu.patients.open, 'glyphicon-chevron-right':!leftMenu.patients.open}" ng-if="validator.patients.completed"></i>
+                                        </div>
+                                    </div>
+                                </uib-accordion-heading>
+                                <div class="description">
+                                    <p style="margin-bottom:5px;">
+                                        {{toSubmit.patients.length}} {{'STUDY.ADD.PATIENTS_SELECTED'|translate}}
                                     </p>
                                 </div>
                             </div>
@@ -191,7 +250,7 @@
                     </div>
 
                     <div class="section-content">
-                        <!-- SECTION: Study ID & Title -->
+                        <!-- SECTION: Study ID -->
                         <div class="row">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
@@ -211,10 +270,10 @@
                         </div>
                         <div class="row">
                             <div class="col-xs-12 col-md-6">
-                                <div class="panel" ng-class="(toSubmit.details.code && toSubmit.details.title) ? 'panel-success': 'panel-danger'">
+                                <div class="panel" ng-class="(toSubmit.details.code) ? 'panel-success': 'panel-danger'">
                                     <div class="panel-heading"><strong>{{'STUDY.ADD.DETAILS_TITLE'|translate}}</strong>
-                                        <span ng-hide="toSubmit.details.code && toSubmit.details.title" style="float:right"><em>{{'STUDY.ADD.INCOMPLETE'|translate}}</em></span>
-                                        <span ng-show="toSubmit.details.code && toSubmit.details.title" style="float:right"><em>{{'STUDY.ADD.COMPLETE'|translate}}</em></span>
+                                        <span ng-hide="toSubmit.details.code && toSubmit.details.title_en && toSubmit.details.title_fr" style="float:right"><em>{{'STUDY.ADD.INCOMPLETE'|translate}}</em></span>
+                                        <span ng-show="toSubmit.details.code && toSubmit.details.title_en && toSubmit.details.title_fr" style="float:right"><em>{{'STUDY.ADD.COMPLETE'|translate}}</em></span>
                                     </div>
                                     <div class="panel-body form-horizontal">
                                         <div class="form-group">
@@ -225,21 +284,87 @@
                                                 <textarea class="form-control" rows="2" ng-model="toSubmit.details.code" ng-change="detailsUpdate()"></textarea>
                                             </div>
                                         </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- END SECTION -->
+
+
+                        <!-- SECTION: Title & description -->
+                        <div class="row fadeIn" ng-if="validator.details.completed">
+                            <div class="col-xs-12 side-menu-title">
+                                <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
+                                    <span style="background-color:#e6edfa; padding: 0 10px;">
+                                        <span class="fas fa-dot-circle"></span>
+                                        <h2>{{'STUDY.ADD.TITLE_DESCRIPTION'|translate}}</h2>
+                                    </span>
+                                </div>
+                            </div>
+                            <div class="col-xs-12">
+                                <p style="margin-bottom: 10px;">
+                                    <span style="color:#d9534f"><strong>{{'STUDY.ADD.REQUIRED'|translate}} </strong></span>
+                                    {{'STUDY.ADD.TITLE_DESCRIPTION_EXPLANATION'|translate}}
+                                </p>
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-6">
+                                <div class="panel" ng-class="(toSubmit.title_desc.title_EN && toSubmit.title_desc.description_EN) ? 'panel-success': 'panel-danger'">
+                                    <div class="panel-heading"><strong>{{'STUDY.ADD.ENGLISH'|translate}} </strong>
+                                        <span ng-hide="toSubmit.title_desc.title_EN && toSubmit.title_desc.description_EN" style="float:right"><em>{{'STUDY.ADD.INCOMPLETE'|translate}} </em></span>
+                                        <span ng-show="toSubmit.title_desc.title_EN && toSubmit.title_desc.description_EN" style="float:right"><em>{{'STUDY.ADD.COMPLETE'|translate}} </em></span>
+                                    </div>
+                                    <div class="panel-body form-horizontal">
                                         <div class="form-group">
                                             <label class="control-label col-xs-12 col-lg-2">
                                                 {{'STUDY.ADD.TITLE_2'|translate}}
                                             </label>
                                             <div class="col-xs-12 col-lg-10">
-                                                <textarea class="form-control" rows="2" ng-model="toSubmit.details.title" ng-change="detailsUpdate()"></textarea>
+                                                <input class="form-control" type="text" ng-model="toSubmit.title_desc.title_EN" placeholder="{{'STUDY.ADD.ENGLISH_TITLE'|translate}} " required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-xs-12 col-lg-2">
+                                                {{'STUDY.ADD.DESCRIPTION'|translate}}
+                                            </label>
+                                            <div class="col-xs-12 col-lg-10">
+                                                <div text-angular ng-model="toSubmit.title_desc.description_EN" placeholder="{{'STUDY.ADD.ENGLISH_DESCRIPTION'|translate}} " required="required" ta-toolbar="toolbar"></div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-md-6 col-lg-6">
+                                <div class="panel" ng-class="(toSubmit.title_desc.title_FR && toSubmit.title_desc.description_FR) ? 'panel-success': 'panel-danger'">
+                                    <div class="panel-heading"><strong>{{'STUDY.ADD.FRENCH'|translate}} </strong>
+                                        <span ng-hide="toSubmit.title_desc.title_FR && toSubmit.title_desc.description_FR" style="float:right"><em>{{'STUDY.ADD.INCOMPLETE'|translate}} </em></span>
+                                        <span ng-show="toSubmit.title_desc.title_FR && toSubmit.title_desc.description_FR" style="float:right"><em>{{'STUDY.ADD.COMPLETE'|translate}} </em></span>
+                                    </div>
+                                    <div class="panel-body form-horizontal">
+                                        <div class="form-group">
+                                            <label class="control-label col-xs-12 col-lg-2">
+                                                {{'STUDY.ADD.TITLE_2'|translate}}
+                                            </label>
+                                            <div class="col-xs-12 col-lg-10">
+                                                <input class="form-control" type="text" ng-model="toSubmit.title_desc.title_FR" placeholder="{{'STUDY.ADD.FRENCH_TITLE'|translate}} " required="required">
+                                            </div>
+                                        </div>
+                                        <div class="form-group">
+                                            <label class="control-label col-xs-12 col-lg-2">
+                                                {{'STUDY.ADD.DESCRIPTION'|translate}}
+                                            </label>
+                                            <div class="col-xs-12 col-lg-10">
+                                                <div text_angular ng-model="toSubmit.title_desc.description_FR" placeholder="{{'STUDY.ADD.FRENCH_DESCRIPTION'|translate}} " required="required" ta-toolbar="toolbar"></div>
                                             </div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <!-- END SECTION -->
+
+
+
                         <!-- SECTION: Principal Investigator -->
-                        <div class="row fadeIn" ng-if="validator.details.completed">
+                        <div class="row fadeIn" ng-if="validator.title_desc.completed">
                             <div class="col-xs-12 side-menu-title">
                                 <div style="height: 10px; border-bottom: 2px solid rgba(111, 84, 153, 0.8);">
                                     <span style="background-color:#e6edfa; padding: 0 10px;">
@@ -345,17 +470,12 @@
                                             <div class="panel-input">
                                                 <div class="input-group">
                                                     <span class="input-group-addon"><span class="glyphicon glyphicon-search"></span></span>
-                                                    <input class="form-control" maxlength="100" type="text" ng-model="patientSearchField" ng-change="selectAll.patient.checked = false;" placeholder="{{'STUDY.ADD.SEARCH'|translate}}" ng-disabled="selectAll.patient.checked && selectAll.patient.all" />
-                                                </div>
-                                                <div style="padding: 10px;">
-                                                    <label>
-                                                        <input type="checkbox" ng-click="toogleAll()" ng-checked="selectAll.patient.checked"> {{'STUDY.ADD.SELECT_ALL'|translate}}
-                                                    </label>
+                                                    <input class="form-control" maxlength="100" type="text" ng-model="patientSearchField" placeholder="{{'STUDY.ADD.SEARCH'|translate}}" />
                                                 </div>
                                                 <ul class="list-items">
                                                     <li ng-repeat="patient in patientsList | filter: patientSearchField">
                                                         <label>
-                                                            <input ng-disabled="selectAll.patient.checked && selectAll.patient.all" type="checkbox" ng-model="patient.added" ng-click="selectTrigger(patient, selectAll.patient, triggerSection.patient)"> {{patient.name}}
+                                                            <input type="checkbox" ng-model="patient.added"> {{patient.name}}
                                                         </label>
                                                     </li>
                                                 </ul>
