--- a/templates/patient/patient-report.html
+++ b/templates/patient/patient-report.html
@@ -48,7 +48,7 @@
                             </div>
                         </div>
                         <div class="col-xs-12 col-sm-6 col-md-4 home-menu">
-                            <div class="panel-container animated" ng-class="{pulse: hoverMenuRegistration}" ng-mouseenter="hoverMenuRegistration=true" ng-mouseleave="hoverMenuRegistration=false" ng-click="goToGroup();" style="cursor:pointer;">
+                            <div class="panel-container animated" ng-class="{pulse: hoverMenu}" ng-mouseenter="hoverMenu=true" ng-mouseleave="hoverMenu=false" ng-click="goToGroup();" style="cursor:pointer;">
                                 <div class="panel-info">
                                     <div class="panel-content">
                                         <div class="icon-home clearfix">
